--- a/functions/_str.scss
+++ b/functions/_str.scss
@@ -40,3 +40,22 @@
 
   @return $str;
 }
+
+@function str-split($string, $separator) {
+  $split-arr: ();
+  $index : str-index($string, $separator);
+
+  @while $index != null {
+    $item: str-slice($string, 1, $index - 1);
+    $split-arr: append($split-arr, $item);
+    $string: str-slice($string, $index + 1);
+    $index : str-index($string, $separator);
+  }
+  $split-arr: append($split-arr, $string);
+
+  @return $split-arr;
+}
+
+@function empty($map) {
+  @return $map == null or length(map-keys($map)) < 1;
+}
