--- a/utilities/_txt-align.scss
+++ b/utilities/_txt-align.scss
@@ -1,7 +1,6 @@
 /// text-align
-$um-txt-align: (
+$txt-align: (
   _prefix: "txt-align",
-  _common: (),
   left: (
     text-align: left,
   ),
@@ -12,6 +11,3 @@ $um-txt-align: (
     text-align: right,
   ),
 ) !default;
-
-/// Add to utility map
-$um: map-merge($um, (um-txt-align: $um-txt-align));
