--- a/utilities/_fc.scss
+++ b/utilities/_fc.scss
@@ -1,5 +1,2 @@
 /// font color
-$um-fc: maple-generate($color-map, "color", "fc") !default;
-
-/// Add to utility map
-$um: map-merge($um, (um-fc: $um-fc));
+$fc: maple-generate($color-map, "color", "fc") !default;
