--- a/utilities/_flx-order.scss
+++ b/utilities/_flx-order.scss
@@ -1,19 +1,15 @@
-$um-flx-order: (
+$flx-order: (
   _prefix: "flx-order",
-  _common: (),
-  1: (order: 1),
-  2: (order: 2),
-  3: (order: 3),
-  4: (order: 4),
-  5: (order: 5),
-  6: (order: 6),
-  7: (order: 7),
-  8: (order: 8),
-  9: (order: 9),
-  10: (order: 10),
-  11: (order: 11),
-  12: (order: 12),
+  "1": (order: 1),
+  "2": (order: 2),
+  "3": (order: 3),
+  "4": (order: 4),
+  "5": (order: 5),
+  "6": (order: 6),
+  "7": (order: 7),
+  "8": (order: 8),
+  "9": (order: 9),
+  "10": (order: 10),
+  "11": (order: 11),
+  "12": (order: 12),
 );
-
-/// Add to utility map
-$um: map-merge($um, (um-flx-order: $um-flx-order));
