--- a/utilities/_fp.scss
+++ b/utilities/_fp.scss
@@ -1,32 +1,28 @@
 /// paragraph from 1 to 6
-$um-fp: (
+$fp: (
   _prefix: "fp",
-  _common: (),
-  1: (
+  "1": (
     font-size: $font-size-p1,
     margin-bottom: $spacer2,
   ),
-  2: (
+  "2": (
     font-size: $font-size-p2,
     margin-bottom: $spacer2,
   ),
-  3: (
+  "3": (
     font-size: $font-size-p3,
     margin-bottom: $spacer2,
   ),
-  4: (
+  "4": (
     font-size: $font-size-p4,
     margin-bottom: $spacer1,
   ),
-  5: (
+  "5": (
     font-size: $font-size-p5,
     margin-bottom: $spacer1,
   ),
-  6: (
+  "6": (
     font-size: $font-size-p6,
     margin-bottom: $spacer1,
   ),
 ) !default;
-
-/// Add to utility map
-$um: map-merge($um, (um-fp: $um-fp));
