--- a/utilities/_opacity.scss
+++ b/utilities/_opacity.scss
@@ -1,19 +1,15 @@
 /// opacity
-$um-opacity: (
+$opacity: (
   _prefix: "opacity",
-  _common: (),
-  0: (opacity: 0),
-  10: (opacity: 10),
-  20: (opacity: 20),
-  30: (opacity: 30),
-  40: (opacity: 40),
-  50: (opacity: 50),
-  60: (opacity: 60),
-  70: (opacity: 70),
-  80: (opacity: 80),
-  90: (opacity: 90),
-  100: (opacity: 100),
+  "0": (opacity: 0),
+  "10": (opacity: 0.1),
+  "20": (opacity: 0.2),
+  "30": (opacity: 0.3),
+  "40": (opacity: 0.4),
+  "50": (opacity: 0.5),
+  "60": (opacity: 0.6),
+  "70": (opacity: 0.7),
+  "80": (opacity: 0.8),
+  "90": (opacity: 0.9),
+  "100": (opacity: 1),
 ) !default;
-
-/// Add to utility map
-$um: map-merge($um, (um-opacity: $um-opacity));
