--- a/utilities/_pos-align.scss
+++ b/utilities/_pos-align.scss
@@ -1,5 +1,5 @@
 /// position align
-$um-pos-align: (
+$pos-align: (
   _prefix: "pos-align",
   _common: (
     bottom: auto,
@@ -11,45 +11,60 @@ $um-pos-align: (
   top-left: (
     left: 0,
     top: 0,
+    bottom: auto,
+    right: auto,
   ),
   top-center: (
     left: 50%,
     top: 0,
     transform: translateX(-50%),
+    bottom: auto,
+    right: auto,
   ),
   top-right: (
     right: 0,
     top: 0,
+    bottom: auto,
+    left: auto,
   ),
   center-left: (
     left: 0,
     top: 50%,
     transform: translateY(-50%),
+    bottom: auto,
+    right: auto,
   ),
   center-center: (
     left: 50%,
     top: 50%,
     transform: translate(-50%, -50%),
+    bottom: auto,
+    right: auto,
   ),
   center-right: (
     right: 0,
     top: 50%,
     transform: translateY(-50%),
+    bottom: auto,
+    left: auto,
   ),
   bottom-left: (
     bottom: 0,
     left: 0,
+    top: auto,
+    right: auto,
   ),
   bottom-center: (
     bottom: 0,
     left: 50%,
     transform: translateX(-50%),
+    top: auto,
+    right: auto,
   ),
   bottom-right: (
     bottom: 0,
     right: 0,
+    top: auto,
+    left: auto,
   ),
 );
-
-/// Add to utility map
-$um: map-merge($um, (um-pos-align: $um-pos-align));
