--- a/utilities/_w.scss
+++ b/utilities/_w.scss
@@ -1,7 +1,6 @@
 /// width
-$um-w: (
+$w: (
   _prefix: "w",
-  _common: (),
   cover: (
     left: 50%,
     margin-left: -50vw,
@@ -11,27 +10,24 @@ $um-w: (
     width: 100vw,
   ),
   auto: ( width: auto ),
-  5: (width: 5%),
-  10: (width: 10%),
-  15: (width: 15%),
-  20: (width: 20%),
-  25: (width: 25%),
-  30: (width: 30%),
-  35: (width: 35%),
-  40: (width: 40%),
-  45: (width: 45%),
-  50: (width: 50%),
-  55: (width: 55%),
-  60: (width: 60%),
-  65: (width: 65%),
-  70: (width: 70%),
-  75: (width: 75%),
-  80: (width: 80%),
-  85: (width: 85%),
-  90: (width: 90%),
-  95: (width: 95%),
-  100: (width: 100%),
+  "5": (width: 5%),
+  "10": (width: 10%),
+  "15": (width: 15%),
+  "20": (width: 20%),
+  "25": (width: 25%),
+  "30": (width: 30%),
+  "35": (width: 35%),
+  "40": (width: 40%),
+  "45": (width: 45%),
+  "50": (width: 50%),
+  "55": (width: 55%),
+  "60": (width: 60%),
+  "65": (width: 65%),
+  "70": (width: 70%),
+  "75": (width: 75%),
+  "80": (width: 80%),
+  "85": (width: 85%),
+  "90": (width: 90%),
+  "95": (width: 95%),
+  "100": (width: 100%),
 ) !default;
-
-/// Add to utility map
-$um: map-merge($um, (um-w: $um-w));
